--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
@@ -23,10 +23,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="View\CartPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ProductsPageMaster.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\NavBar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ProductDetails.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
