--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
@@ -11,8 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Naxam.CarouselView" Version="0.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
+    <PackageReference Include="Plugin.Toast" Version="2.1.2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.618606" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
 
