--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
@@ -28,6 +28,9 @@
     <EmbeddedResource Update="View\CartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\FilterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
