--- a/OnlineShoppingXamarin/OnlineShoppingXamarin.Android/OnlineShoppingXamarin.Android.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin.Android/OnlineShoppingXamarin.Android.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Naxam.CarouselView">
       <Version>0.0.1</Version>
     </PackageReference>
