--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
     <PackageReference Include="Naxam.CarouselView" Version="0.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Plugin.Toast" Version="2.1.2" />
