--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/OnlineShoppingXamarin.csproj
@@ -28,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="View\CartItemView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\CartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
